Bug 1445853 - Work-around for mailbox:// URL not supporting UTF-8 paths. r=jorgk